# mlops-fraud-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  metrics.json  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
k8s/: deployment.yaml  hpa.yaml  service.yaml
models/: xgboost_fraud.joblib
monitoring/grafana/dashboards/: fraud-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
reports/: classification_report.txt
src/: __init__.py  drift.py  evaluate.py  explain.py  predict.py  preprocess.py  train.py
tests/: __init__.py  test_predict.py  test_preprocess.py  test_train.py
