[project]
name = "mlops-fraud-detection"
version = "1.0.0"
description = "End-to-end MLOps pipeline for financial fraud detection using XGBoost, FastAPI, Docker, Kubernetes, and GenAI explainability"
requires-python = ">=3.10"
authors = []
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
